--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "jpickle",
-  "description": "Simple full-javascript pickle deserializer",
+  "description": "Simple full-javascript pickle parser",
   "version": "0.1.0",
+  "license": "MIT",
+  "author": "Jeremy Lainé",
+  "main": "./lib/jpickle",
   "repository": {
     "type": "git",
     "url": "git://github.com/jlaine/node-jpickle.git"
   },
-  "author": "Jeremy Lainé",
-  "main": "./lib/jpickle",
+  "keywords": {
+    "pickle"
+  },
   "directories": {
     "lib": "lib"
   },
